# vsgSiege

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
src/: ContentDb.cpp  ContentDb.hpp  Game.cpp  Game.hpp  SiegeVisitor.cpp  SiegeVisitor.hpp  Systems.hpp  main.cpp
src/cfg/: ArgsConfig.cpp  IConfig.hpp  RegistryConfig.cpp  SteamConfig.cpp  UserConfig.cpp  WritableConfig.cpp  WritableConfig.hpp
src/gas/: Fuel.cpp  FuelParser.cpp  FuelParser.hpp  FuelScanner.cpp  FuelScanner.hpp  FuelScanner.r2c
src/io/: BinaryReader.cpp  BinaryReader.hpp  FileNameMap.cpp  FileNameUtils.hpp  Fuel.cpp  Fuel.hpp  FuelParser.cpp  FuelParser.hpp  FuelScanner.cpp  IFileSys.hpp  LocalFileSys.cpp  LocalFileSys.hpp  NamingKeyMap.cpp  NamingKeyMap.hpp  StringTool.cpp  StringTool.hpp  TankFileSys.cpp  TankFileSys.hpp  stack.hh
src/io/tank/: TankFile.cpp  TankFile.hpp  TankFileReader.cpp
src/state/: FullMapTestState.hpp  GameStateMgr.cpp  GameStateMgr.hpp  IGameState.cpp  IGameState.hpp  IGameStateMgr.hpp  IGameStateProvider.hpp  InitState.cpp  InitState.hpp  ProfileLoadingState.hpp  RegionStitchTestState.cpp  RegionStitchTestState.hpp  RegionTestState.hpp  SiegeNodeTestState.cpp  SiegeNodeTestState.hpp
src/state/test/: ASPMeshTestState.cpp  ASPMeshTestState.hpp  BSPTreeTestState.cpp  BSPTreeTestState.hpp  EmptyTestState.cpp  EmptyTestState.hpp  FullMapTestState.cpp  FullMapTestState.hpp  LightTestState.cpp  LightTestState.hpp  ProfileLoadingState.cpp  ProfileLoadingState.hpp  RegionStitchTestState.cpp  RegionStitchTestState.hpp  RegionTestState.cpp  RegionTestState.hpp  SiegeNodeTestState.cpp  SiegeNodeTestState.hpp
src/state/vsgExamples/: vsgExamplesDraw.cpp  vsgExamplesDraw.hpp
src/vsg/: ReaderWriterASP.cpp  ReaderWriterASP.hpp  ReaderWriterRAW.cpp  ReaderWriterRAW.hpp  ReaderWriterRegion.cpp  ReaderWriterRegion.hpp  ReaderWriterSNO.cpp  ReaderWriterSNO.hpp  ReaderWriterSiegeMesh.cpp  ReaderWriterSiegeMesh.hpp  ReaderWriterSiegeNodeList.cpp  ReaderWriterSiegeNodeList.hpp
src/world/: Aspect.cpp  Aspect.hpp  AspectImpl.hpp  DatabaseGuid.cpp  DatabaseGuid.hpp  Math.hpp  MeshDatabase.hpp  Region.cpp  Region.hpp  RenderingStaticObject.cpp  RenderingStaticObject.hpp  SiegeBSP.cpp  SiegeBSP.hpp  SiegeLogicalMesh.cpp  SiegeLogicalMesh.hpp  SiegeLogicalNode.cpp  SiegeLogicalNode.hpp  SiegeMesh.cpp  SiegeMesh.hpp  SiegeMeshDoor.hpp  SiegeNode.cpp  SiegeNode.hpp  SiegePos.hpp  WorldMap.cpp  WorldMap.hpp  WorldMapData.cpp  WorldMapData.hpp  bsp.cpp  bsp.hpp  math_functions.cpp  math_functions.hpp
